emc2 (1:2.2.3~cvs) unstable; urgency=low

  * gcode quick reference had G98, G99 transposed
  * gcode quick reference had wrong links to G18, G19 documentation
  * make g38.2 probe log 0.000000 for axes that do not exist (instead of
    an uninitialized value)
  * axis: make 'touch off' work when the loaded file uses percent signs 
  * stepconf: fix several problems with Test Axis button

 -- jepler <jepler@unpythonic.net>  Mon, 10 Dec 2007 10:57:06 -0600

emc2 (1:2.2.2) unstable; urgency=low

  * move hal_unlink manpage to development package
  * make gcode quick reference link into our own full gcode reference
    instead of the outdated nist document
  * fix stepconf 'pulley' numbers: the 'motor' and 'leadscrew' fields
    were transposed
  * fix stepconf 'charge pump' pin
  * fix stepconf 'external estop' pin
  * fix homing in stepconf-created configurations
  * fix halshow 'watch pin'
  * restore cone rotation when the A-axis moves
  * fix 'scara' sample configuration
  * fix display of home and limit switches on XYZBC machines
  * improve legibility of running line in text area
  * additional french documentation translation, including gcode quickref
  * improve time estimate in gcode File > Properties: it paid no attention to
    requested feed rates
  * fix ZX-plane (G18) arcs in the AXIS preview window
  * fix tripod kinematics example configuration
  * fix "arc in mdi takes forever" bug (SF#1834576)
  * fix gcode documentation of toolchange
  * fix comp311 examples to program Z position
  * fix stepconf for negative and fractional axis SCALEs
  * implement M66 E- (read analog value from gcode)
  * add missing dependency on python2.4-glade
  * fix problem where metric image-to-gcode would go to the safety height
    before setting metric units
  * fix stepconf so that axis doesn't display an 'unknown letter' error
    when starting a lathe configuration
  * fix stepconf 'pin 'motion.spindle-speed-in' was already linked' for